fix wrap texr

--- a/src/styles/MainScreen.css
+++ b/src/styles/MainScreen.css
@@ -74,6 +74,7 @@
   background-color: lightgray;
   border-radius: 24px;
   height: 100%;
+  overflow-wrap: break-word;
 }
 .main-screen__copy {
   padding-top: 16px;
